# ghidra-cpp

./: .gitmodules  AGENTS.md  CMakeLists.txt
apps/: CMakeLists.txt
apps/ghidra_export/: main.cpp
apps/ghidra_gui/: main.cpp
apps/ghidra_headless/: main.cpp
apps/ghidra_server/: main.cpp
apps/sleighc/: main.cpp
docs/: architecture.md  changelog.md  decision-log.md  project-status.md  tech-stack.md
include/ghirda/core/: address_space.h  debug_info.h  memory_image.h  memory_map.h  program.h  relocation.h  symbol.h  type_system.h
include/ghirda/decompiler/: decompiler.h  rule_engine.h  ssa.h
include/ghirda/loader/: dwarf_reader.h  elf_loader.h  loader.h  macho_loader.h  pe_loader.h
include/ghirda/plugin/: abi.h  registry.h
include/ghirda/script/: lua_runtime.h  script_api.h
include/ghirda/server/: server.h  session.h
include/ghirda/sleigh/: decoder.h  pcode_ir.h  sleigh_compiler.h
include/ghirda/ui/: docking.h  ui_app.h  views.h
src/: CMakeLists.txt
src/core/: address_space.cpp  debug_info.cpp  memory_image.cpp  memory_map.cpp  program.cpp  symbol.cpp  type_system.cpp
src/decompiler/: decompiler.cpp  rule_engine.cpp  ssa.cpp
src/loader/: dwarf_reader.cpp  elf_loader.cpp  loader.cpp  macho_loader.cpp  pe_loader.cpp
src/plugin/: abi.cpp  registry.cpp
src/script/: lua_runtime.cpp  script_api.cpp
src/server/: server.cpp  session.cpp
src/sleigh/: decoder.cpp  pcode_ir.cpp  sleigh_compiler.cpp
src/ui/: docking.cpp  ui_app.cpp  views.cpp
