add_library(ghirda_core STATIC core/program.cpp core/address_space.cpp core/memory_map.cpp core/memory_image.cpp core/symbol.cpp core/type_system.cpp)
add_library(ghirda_sleigh STATIC sleigh/pcode_ir.cpp sleigh/sleigh_compiler.cpp sleigh/decoder.cpp)
add_library(ghirda_decompiler STATIC decompiler/decompiler.cpp decompiler/ssa.cpp decompiler/rule_engine.cpp)
add_library(ghirda_loader STATIC loader/loader.cpp loader/elf_loader.cpp loader/pe_loader.cpp loader/macho_loader.cpp)
add_library(ghirda_ui STATIC ui/ui_app.cpp ui/docking.cpp ui/views.cpp)
add_library(ghirda_script STATIC script/lua_runtime.cpp script/script_api.cpp)
add_library(ghirda_plugin STATIC plugin/registry.cpp plugin/abi.cpp)
add_library(ghirda_server STATIC server/server.cpp server/session.cpp)

target_include_directories(ghirda_core PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_sleigh PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_decompiler PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_loader PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_ui PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_script PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_plugin PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ghirda_server PUBLIC ${CMAKE_SOURCE_DIR}/include)

target_link_libraries(ghirda_sleigh PUBLIC ghirda_core)
target_link_libraries(ghirda_decompiler PUBLIC ghirda_core ghirda_sleigh)
target_link_libraries(ghirda_loader PUBLIC ghirda_core)
target_link_libraries(ghirda_ui PUBLIC ghirda_core ghirda_decompiler ghirda_loader ghirda_plugin ghirda_script)
target_link_libraries(ghirda_script PUBLIC ghirda_core)
target_link_libraries(ghirda_plugin PUBLIC ghirda_core)
target_link_libraries(ghirda_server PUBLIC ghirda_core ghirda_plugin)
